@@ -1,6 +1,7 @@
 package com.connorcode.sigmautils.config;
 
 import com.connorcode.sigmautils.SigmaUtilsClient;
+import com.connorcode.sigmautils.config.settings.KeyBindSetting;
 import com.connorcode.sigmautils.config.settings.Setting;
 import com.connorcode.sigmautils.module.Module;
 import com.connorcode.sigmautils.modules.meta.ToggleSound;
@@ -11,7 +12,6 @@ import net.minecraft.client.option.KeyBinding;
 import net.minecraft.client.util.InputUtil;
 import net.minecraft.nbt.NbtCompound;
 import net.minecraft.nbt.NbtIo;
-import net.minecraft.util.Pair;
 import org.lwjgl.glfw.GLFW;
 
 import java.io.File;
@@ -25,27 +25,15 @@ public class Config {
     static final KeyBinding configKeybinding = KeyBindingHelper.registerKeyBinding(
             new KeyBinding("Open Gui", InputUtil.Type.KEYSYM, GLFW.GLFW_KEY_U, "Sigma Utils"));
     public static HashMap<Class<Module>, List<Setting<?>>> moduleSettings = new HashMap<>();
+    public static List<Setting<KeyBindSetting>> moduleKeybinds = new ArrayList<>();
 
     public static void initKeybindings() {
-        List<Pair<String, KeyBinding>> moduleKeybindings = new ArrayList<>();
-        for (Module i : SigmaUtilsClient.modules) {
-            moduleKeybindings.add(new Pair<>(i.id, KeyBindingHelper.registerKeyBinding(
-                    new KeyBinding(String.format("Toggle %s", i.name), InputUtil.Type.KEYSYM, GLFW.GLFW_KEY_UNKNOWN,
-                            "Sigma Utils"))));
-        }
-
         ClientTickEvents.END_CLIENT_TICK.register(client -> {
             if (configKeybinding.wasPressed()) client.setScreen(new ConfigGui());
-            for (Pair<String, KeyBinding> i : moduleKeybindings) {
-                if (!i.getRight()
-                        .wasPressed()) continue;
+            for (Setting<KeyBindSetting> s : moduleKeybinds) {
+                if (!((KeyBindSetting) s).pressed()) continue;
 
-                Optional<Module> find = SigmaUtilsClient.modules.stream()
-                        .filter(m -> Objects.equals(m.id, i.getLeft()))
-                        .findFirst();
-                if (find.isEmpty()) continue;
-                Module module = find.get();
-
+                Module module = s.getModule();
                 module.enabled ^= true;
                 ToggleSound.play(module.enabled);
                 if (module.enabled) module.enable(MinecraftClient.getInstance());
@@ -60,9 +48,7 @@ public class Config {
     }
 
     public static boolean getEnabled(String id) {
-        Optional<Module> find = SigmaUtilsClient.modules.stream()
-                .filter(m -> Objects.equals(m.id, id))
-                .findFirst();
+        Optional<Module> find = SigmaUtilsClient.modules.stream().filter(m -> Objects.equals(m.id, id)).findFirst();
         return find.isPresent() && find.get().enabled;
     }
 
@@ -72,8 +58,7 @@ public class Config {
 
     public static <T extends Module> Module getModule(Class<T> moduleClass) {
         try {
-            return moduleClass.getConstructor()
-                    .newInstance();
+            return moduleClass.getConstructor().newInstance();
         } catch (InstantiationException | IllegalAccessException | InvocationTargetException |
                  NoSuchMethodException e) {
             e.printStackTrace();
@@ -83,8 +68,7 @@ public class Config {
 
     public static void load() throws IOException {
         if (!configFile.exists()) return;
-        NbtCompound nbt = Objects.requireNonNull(NbtIo.read(configFile))
-                .getCompound("modules");
+        NbtCompound nbt = Objects.requireNonNull(NbtIo.read(configFile)).getCompound("modules");
         if (nbt == null) return;
         for (Module i : SigmaUtilsClient.modules) {
             i.loadConfig(nbt.getCompound(i.id));
@@ -99,8 +83,7 @@ public class Config {
         // Add modules
         NbtCompound modules = new NbtCompound();
         for (Module i : SigmaUtilsClient.modules) modules.put(i.id, i.saveConfig());
-        configFile.getParentFile()
-                .mkdirs();
+        configFile.getParentFile().mkdirs();
         nbt.put("modules", modules);
 
         NbtIo.write(nbt, configFile);
